[workspace]
members = [
  "silksurf-js",
  "crates/silksurf-app",
  "crates/silksurf-engine",
  "crates/silksurf-core",
  "crates/silksurf-html",
  "crates/silksurf-css",
  "crates/silksurf-dom",
  "crates/silksurf-layout",
  "crates/silksurf-render",
  "crates/silksurf-text",
  "crates/silksurf-gui",
  "crates/silksurf-net",
  "crates/silksurf-tls",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
# MSRV pinned to current stable. Bump in lockstep with rust-toolchain.toml.
# Edition 2024 stabilized in Rust 1.85; any 1.85+ stable can build the
# workspace. See docs/design/ARCHITECTURE-DECISIONS.md ADR-008.
rust-version = "1.94.1"

[workspace.dependencies]
bumpalo = { version = "3.20", features = ["collections"] }
lasso = "0.7"
memchr = "2.8"
rayon = "1.11"
rustc-hash = "2.1"
smallvec = { version = "1.15", features = ["union", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
smol_str = { version = "0.3", features = ["serde"] }
mimalloc = { version = "0.1", default-features = false }
# Structured logging. Workspace-wide adoption is opt-in via the
# "tracing" feature on each crate that emits spans (currently only
# silksurf-js; expansion to silksurf-engine is queued in the
# observability roadmap stream).
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
rustls = "0.23"
tokio = { version = "1", features = ["rt", "io-util", "net", "time"] }
tokio-rustls = "0.26"
h2 = "0.4"
bytes = "1"
http = "1"
hickory-resolver = { version = "0.26.0-beta.3", features = ["dnssec-ring", "tokio"] }
hickory-proto = { version = "0.26.0-beta.3", features = ["dnssec-ring"] }
# UAX #9 and UAX #14 support (AD-023). unicode-segmentation is the
# existing peer; bidi and linebreak complete the minimal i18n triad.
unicode-bidi = "0.3"
unicode-linebreak = "0.1"
# WHATWG-conformant HTML parser (Servo lineage, html5lib test suite).
# Used by silksurf-html TreeSink adapter to replace the hand-written tokenizer.
html5ever = "0.38"
# CPU-only 2D rasterizer (Skia subset, pure Rust). Used by silksurf-render
# for anti-aliased path fill via PixmapMut::from_bytes wrapping the tile buffer.
tiny-skia = "0.12"
# Unicode-aware text shaping and layout (Servo/Mozilla lineage). Used by
# silksurf-text for measure_text and rasterize_glyphs via SwashCache.
cosmic-text = "0.19"
# High-performance CSS Flexbox + Grid layout (Bevy/Dioxus/Slint lineage).
# Used by silksurf-layout TaffyLayout to replace the hand-written flex algorithm.
taffy = "0.10"
# Cross-platform windowing and event loop (Bevy/Alacritty/wgpu lineage).
# Used by silksurf-gui winit-backend to replace the XCB-only event loop.
winit = "0.30"
# Cross-platform software pixel buffer; surface.buffer_mut() -> &mut [u32].
# Used by silksurf-gui winit-backend to present rasterizer output.
softbuffer = "0.4"
# ECMA-262 2024+ compliant JS engine (pure Rust, Servo/Mozilla lineage).
# Used by silksurf-js boa_backend as the production JS runtime; replaces
# the hand-written bytecode VM which is preserved behind the legacy-vm feature.
boa_engine = { version = "0.21", features = ["annex-b"] }
boa_runtime = "0.21"

# ---------------------------------------------------------------------------
# Workspace-wide lints.
#
# WHY: The project policy is `RUSTFLAGS='-D warnings' cargo clippy` MUST stay
#      clean. The default lint groups (`clippy::all` + cargo) are enforced as
#      hard errors and treated as the bar for every PR. Beyond that, the
#      pedantic group is opt-in and noisy by design; we enable it here so the
#      CI lane catches drift but allow the specific lints that the codebase
#      has deliberately accepted (see silksurf-js/Cargo.toml [lints.clippy]
#      for the original per-crate stance that this section mirrors).
#
# WHAT: Pedantic warnings that survive the workspace-wide allows still fire
#       as warnings (they are reported by `cargo clippy -- -W clippy::pedantic`
#       but do not break the default build). Per-site `#[allow(...)]` blocks
#       are still preferred where the lint flags genuinely-suspect code that
#       has been audited.
#
# HOW: Each crate Cargo.toml opts in with `[lints] workspace = true`. Crates
#      that already define their own `[lints.clippy]` table (currently only
#      silksurf-js) continue to override the workspace defaults locally.
# ---------------------------------------------------------------------------
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(miri)'] }

[workspace.lints.clippy]
# Default groups: warnings are errors via RUSTFLAGS='-D warnings'.
# Lower priority so per-lint `allow` entries below win.
all = { level = "warn", priority = -1 }
# Pedantic group is opted into so CI can spot-check drift; specific lints
# below are allowed because they generate noise that is either not actionable
# in this codebase or that we have audited and accepted on a per-site basis.
pedantic = { level = "warn", priority = -1 }

# Style lints that fire on intentionally explicit patterns and would force
# rewrites without improving clarity.
single_match = "allow"
single_match_else = "allow"
match_like_matches_macro = "allow"
needless_continue = "allow"
inline_always = "allow"
uninlined_format_args = "allow"
match_same_arms = "allow"
redundant_closure_for_method_calls = "allow"
ref_option = "allow"
needless_lifetimes = "allow"
elidable_lifetime_names = "allow"
option_option = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
missing_fields_in_debug = "allow"
format_collect = "allow"

# Pedantic lints we deliberately accept across the workspace.
# Rationale: these track silksurf-js/Cargo.toml's existing stance, with
# additions for lints that proved noisy without surfacing real bugs during
# the SNAZZY-WAFFLE pedantic pass.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
similar_names = "allow"
many_single_char_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
# Cast lints: the workspace deals in pixel coordinates, indices, and color
# components where small-integer truncation and signed/unsigned conversion
# are routine. Per-site `#[allow]` with safety comments is preferred for
# casts in load-bearing code (see e.g. silksurf-render/src/lib.rs); the
# workspace allow keeps the long tail of bench/test/glue sites tractable.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
# Doc lints that have been verified by the pedantic auto-fix pass and only
# trigger on intra-doc-link edge cases (e.g. quoted Rust paths in module
# docs); accepting them here keeps doc churn out of subsequent PRs.
doc_markdown = "allow"

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 2

[profile.test]
inherits = "dev"
debug-assertions = true
overflow-checks = true

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.release-safe]
inherits = "release"
overflow-checks = true
debug-assertions = false

[profile.release-bolt]
inherits = "release"
strip = false
debug = 1

[profile.release-profiling]
inherits = "release"
debug = true
strip = false

[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false

[profile.miri]
inherits = "dev"
opt-level = 0
debug = true

[profile.release-riced]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
debug = 1
strip = "none"

# ---------------------------------------------------------------------------
# Release infrastructure (P9.S1).
#
# WHY: We package release artifacts entirely on the developer workstation
#      (strict-local-only CI per ADR-009). cargo-dist is the canonical
#      packaging tool; configuring it here lets `dist build` produce
#      reproducible tarballs for the supported targets without any cloud
#      orchestration.
# WHAT: workspace-level cargo-dist config. `ci = []` and the absence of any
#      `pr-run-mode` keep all builds purely local. `installers = []` means
#      we do not ship shell-installer or PowerShell-installer wrappers --
#      only raw binary tarballs. The two targets cover developer laptops
#      (x86_64) and the ARM SBC fleet used by the perf lab (aarch64).
# HOW: `dist build` to materialise artifacts into `target/distrib/`,
#      `dist plan` to dry-run, `dist manifest` to introspect the planned
#      release. The release script (scripts/release.sh) wraps the gate.
#
# Note on the original P9 spec: an earlier draft listed `builds-locals = true`
# as a desired key. cargo-dist 0.31 has no such key; the canonical way to
# express "build everything locally, no CI" is the combination
# `ci = []` + `local-artifacts-jobs = []`. That is what we do here.
# ---------------------------------------------------------------------------
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = []
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
installers = []
local-artifacts-jobs = []
# Tarball binaries only (no .deb / .rpm / .msi). The gzip tarball variant
# is the most portable and is what the perf-lab provisioning scripts expect.
unix-archive = ".tar.gz"
windows-archive = ".tar.gz"
# Toolchain pinning lives in rust-toolchain.toml (1.94.1). cargo-dist used
# to accept a `rust-toolchain-version` key but deprecated it in 0.27 in
# favour of letting rustup honour rust-toolchain.toml -- which is what we
# already do. Reproducible-build verification still depends on the rest
# of the workspace agreeing on the same toolchain; see
# docs/development/REPRODUCIBLE-BUILD.md.
