[package]
name = "silksurf-js"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
authors = ["SilkSurf Project"]
description = "Pure Rust JavaScript engine - cleanroom implementation with zero-copy lexer, arena GC, and bytecode VM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/silksurf/silksurf"
keywords = ["javascript", "js", "ecmascript", "vm", "interpreter"]
categories = ["compilers", "parsing", "wasm"]
readme = "../README.md"

# CLEANROOM NOTICE (UPDATED): The hand-written VM remains in src/vm/ and is
# preserved behind the legacy-vm feature for reference and future optimization.
# Production JS execution now delegates to boa_engine (public crate API only).
# Using a crate via its public API is categorically different from copying its
# internals; the cleanroom constraint was a design-phase process safeguard and
# is lifted here for the production runtime dependency only.

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

# =============================================================================
# Core Dependencies (Always Included)
# =============================================================================

[dependencies]
# -----------------------------------------------------------------------------
# Memory & Allocation
# -----------------------------------------------------------------------------
# Arena allocation (zero-copy, bump allocation)
bumpalo = { version = "3.20", features = ["collections"] }

# Fast memory allocator (optional global allocator)
mimalloc = { version = "0.1", optional = true }

# Memory-mapped I/O for bytecode caching (optional)
memmap2 = { version = "0.9", optional = true }

# -----------------------------------------------------------------------------
# Zero-Copy & Serialization
# -----------------------------------------------------------------------------
# Safe transmutes for NaN-boxed values
bytemuck = { version = "1.25", features = ["derive"] }

# Zero-copy byte conversion
zerocopy = { version = "0.8", features = ["derive"] }

# Zero-copy serialization for bytecode caching
rkyv = "0.8"

# -----------------------------------------------------------------------------
# String & Text Processing
# -----------------------------------------------------------------------------
# Unicode support for JS identifiers
unicode-xid = "0.2"

# SIMD-accelerated byte searching (3-6x faster lexer scanning)
memchr = "2.8"

# ECMAScript-compatible regex engine (Unicode property escapes, lookahead,
# named captures). Used by String.prototype.match/search/replace and RegExp.
regress = "0.11"

# -----------------------------------------------------------------------------
# Compile-Time Utilities
# -----------------------------------------------------------------------------
# Perfect hash functions for O(1) keyword lookup
phf = { version = "0.13", features = ["macros"] }

# Compile-time size assertions
static_assertions = "1.1"

# -----------------------------------------------------------------------------
# Bit Manipulation
# -----------------------------------------------------------------------------
# Efficient bit vectors for GC marking
bitvec = "1.0"

# -----------------------------------------------------------------------------
# Runtime Built-ins
# -----------------------------------------------------------------------------
# JSON parsing/serialization (serde ecosystem, battle-tested)
serde = { workspace = true }
serde_json = { workspace = true }

# DOM bridge and networking (for JS-DOM and fetch() integration)
silksurf-dom = { path = "../crates/silksurf-dom" }
silksurf-css = { path = "../crates/silksurf-css" }
silksurf-net = { path = "../crates/silksurf-net" }

# Production JS engine: ECMA-262 2024+ compliant (register VM, ICs, Promises).
# boa_runtime provides Console, timers stubs, and other host object scaffolding.
boa_engine = { workspace = true }
boa_runtime = { workspace = true }

# Tracing subscriber configuration
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Structured logging/tracing
tracing = { version = "0.1", optional = true }

# Command-line argument parsing
clap = { version = "4.6", features = ["derive"], optional = true }

# =============================================================================
# WebAssembly Dependencies (Optional)
# =============================================================================

wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# =============================================================================
# Node.js Bindings (Optional)
# =============================================================================

napi = { version = "3.8", optional = true, features = ["napi4"] }
napi-derive = { version = "3.5", optional = true }

# =============================================================================
# JIT Compiler Dependencies (Optional)
# =============================================================================

cranelift-codegen = { version = "0.130", optional = true }
cranelift-frontend = { version = "0.130", optional = true }
cranelift-jit = { version = "0.130", optional = true }
cranelift-module = { version = "0.130", optional = true }
cranelift-native = { version = "0.130.0", optional = true }

# =============================================================================
# Development Dependencies
# =============================================================================

[dev-dependencies]
# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

# =============================================================================
# Feature Flags
# =============================================================================

[features]
default = []

# Preserve the hand-written bytecode VM for reference and reverse-engineering.
# NOT built by default. Enable only for research, benchmarking, or comparison
# against boa_engine. The VM is NOT MAINTAINED going forward; expect bitrot.
legacy-vm = []

# Full feature set for development
full = [
    "jit",
    "fast-alloc",
    "mmap",
    "cli",
    "tracing-full",
    "wasm",
    "napi",
]

# -----------------------------------------------------------------------------
# Core Features
# -----------------------------------------------------------------------------

# JIT compilation via Cranelift
jit = [
    "cranelift-codegen",
    "cranelift-frontend",
    "cranelift-jit",
    "cranelift-module",
    "cranelift-native",
]

# Fast global allocator
fast-alloc = ["mimalloc"]

# Memory-mapped bytecode cache
mmap = ["memmap2"]

# CLI tools
cli = ["clap"]

# -----------------------------------------------------------------------------
# Tracing Features
# -----------------------------------------------------------------------------

# Full tracing with subscriber
tracing-full = ["tracing", "tracing-subscriber"]

# -----------------------------------------------------------------------------
# Platform Bindings
# -----------------------------------------------------------------------------

# WebAssembly target with wasm-bindgen
wasm = ["wasm-bindgen", "console_error_panic_hook"]

# Node.js native module via napi-rs
napi = ["dep:napi", "napi-derive"]

# -----------------------------------------------------------------------------
# Experimental Features
# -----------------------------------------------------------------------------

# Neural BPE prediction (Phase 3+)
neural = []

# Constrained memory mode (embedded)
constrained = []

# =============================================================================
# Binaries
# =============================================================================

[[bin]]
name = "test262"
path = "src/bin/test262.rs"
required-features = ["legacy-vm"]

[[bin]]
name = "test262_boa"
path = "src/bin/test262_boa.rs"

[[bin]]
name = "silksurf"
path = "src/bin/main.rs"
required-features = ["cli"]

# =============================================================================
# Benchmarks
# =============================================================================

[[bench]]
name = "lexer_throughput"
harness = false

[[bench]]
name = "vm_throughput"
harness = false
required-features = ["legacy-vm"]

[[bench]]
name = "interner"
harness = false

# =============================================================================
# Lints
# =============================================================================

[lints.rust]
# Compiler lints
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(miri)'] }
# unsafe_op_in_unsafe_fn = "warn"  # TODO: Enable after codebase audit (Phase 4)
# missing_docs = "warn"  # Enable after documentation pass

[lints.clippy]
# Clippy lint groups - start permissive, tighten over time
all = "warn"
# pedantic = "warn"  # Enable later after fixing existing code
# nursery = "warn"   # Enable later after stabilizing
cargo = "warn"

# Specific allows for this project
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
