[package]
name = "silksurf-js"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
authors = ["SilkSurf Project"]
description = "SilkSurf JavaScript runtime: boa_engine host integration with DOM bridge, storage, crypto, and fetch host objects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/silksurf/silksurf"
keywords = ["javascript", "js", "ecmascript", "browser", "runtime"]
categories = ["web-programming"]
readme = "../README.md"

# The hand-written VM (lexer, parser, bytecode compiler, GC, JIT) is removed
# per AD-025; git history preserves it. Production JS execution delegates to
# boa_engine through SilkContext (boa_backend). Using a crate via its public
# API is categorically different from copying its internals; the cleanroom
# constraint was a design-phase process safeguard and is lifted for the
# production runtime dependency only.

[lib]
crate-type = ["lib"]

[dependencies]
# DOM bridge and networking (for JS-DOM and fetch() integration)
silksurf-dom = { path = "../crates/silksurf-dom" }
silksurf-net = { path = "../crates/silksurf-net" }
silksurf-css = { path = "../crates/silksurf-css" }
silksurf-html = { path = "../crates/silksurf-html" }

# Production JS engine: ECMA-262 2024+ compliant (register VM, ICs, Promises).
# boa_runtime provides Console, timers stubs, and other host object scaffolding.
boa_engine = { workspace = true }
boa_runtime = { workspace = true }

# JSON host objects (JSON.parse/stringify bridging, scorecard emission)
serde_json = { workspace = true }

# Browser crypto host APIs use OS randomness directly.
getrandom = { workspace = true }

# Fast global allocator (optional)
mimalloc = { version = "0.1", optional = true }

# Structured logging/tracing (optional)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Command-line argument parsing (CLI binary only)
clap = { version = "4.6", features = ["derive"], optional = true }

[dev-dependencies]
# WebSocket host-object tests spin a local tokio server.
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

[features]
default = []

# Fast global allocator
fast-alloc = ["mimalloc"]

# CLI tools
cli = ["clap"]

# Full tracing with subscriber
tracing-full = ["tracing", "tracing-subscriber"]

# Full feature set for development
full = ["fast-alloc", "cli", "tracing-full"]

[[bin]]
name = "test262_boa"
path = "src/bin/test262_boa.rs"

[[bin]]
name = "bundle_probe"
path = "src/bin/bundle_probe.rs"

[[bin]]
name = "silksurf"
path = "src/bin/main.rs"
required-features = ["cli"]

[lints]
# Workspace policy (see ../Cargo.toml [workspace.lints]) already encodes
# the per-lint allows that used to live here (pedantic + cast/doc opts).
workspace = true
