[package]
name = "silksurf-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
publish = false

[dependencies]
silksurf-engine = { path = "../silksurf-engine", features = ["net"] }
silksurf-net = { path = "../silksurf-net" }
silksurf-tls = { path = "../silksurf-tls" }
silksurf-dom = { path = "../silksurf-dom" }
silksurf-css = { path = "../silksurf-css" }
silksurf-layout = { path = "../silksurf-layout" }
silksurf-render = { path = "../silksurf-render", features = ["parallel"] }
silksurf-js = { path = "../../silksurf-js" }
silksurf-core = { path = "../silksurf-core" }
url = { workspace = true }
mimalloc = { workspace = true }
