[package]
name = "silksurf-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
publish = false

[dependencies]
silksurf-engine = { path = "../silksurf-engine", features = ["net"] }
silksurf-dom = { path = "../silksurf-dom" }
silksurf-css = { path = "../silksurf-css" }
silksurf-layout = { path = "../silksurf-layout" }
silksurf-render = { path = "../silksurf-render", features = ["parallel"] }
silksurf-gui = { path = "../silksurf-gui", features = ["winit-backend"] }
silksurf-js = { path = "../../silksurf-js" }
silksurf-core = { path = "../silksurf-core" }
url = { workspace = true }
mimalloc = { workspace = true }
silksurf-tls = { path = "../silksurf-tls" }
rustls = { workspace = true }
tokio = { workspace = true }
hickory-resolver = { workspace = true }
hickory-proto = { workspace = true }
# Observability: app owns the subscriber, env-filter, panic hook (P8.S6).
# `tracing` is needed directly so the panic hook can emit `tracing::error!`
# without depending on a re-export from a sibling crate.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "silksurf-app"
path = "src/main.rs"

[[bin]]
name = "tls-probe"
path = "src/bin/tls_probe.rs"

[features]
platform-verifier = ["silksurf-engine/platform-verifier"]

[lints]
workspace = true
