[package]
name = "silksurf-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
publish = false

[dependencies]
bumpalo = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "interner"
harness = false
