[package]
name = "silksurf-css"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
publish = false

[dependencies]
silksurf-core = { path = "../silksurf-core" }
silksurf-dom = { path = "../silksurf-dom" }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
memchr = { workspace = true }
dashmap = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[features]
default = []
parallel = ["rayon", "dashmap"]
