[package]
name = "silksurf-css"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
publish = false

[dependencies]
silksurf-core = { path = "../silksurf-core" }
silksurf-dom = { path = "../silksurf-dom" }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
memchr = { workspace = true }
smol_str = { workspace = true }
serde = { workspace = true }
mimalloc = { workspace = true }
encoding_rs = "0.8"
