[package]
name = "silksurf-css"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
publish = false

[dependencies]
silksurf-core = { path = "../silksurf-core" }
silksurf-dom = { path = "../silksurf-dom" }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
memchr = { workspace = true }
smol_str = { workspace = true }
serde = { workspace = true }
mimalloc = { workspace = true }
encoding_rs = "0.8"

[features]
# cs-soa: Structure-of-Arrays layout for ComputedStyle.
# Off by default; additive only. Enables the style_soa module and the
# ComputedStyleSoA type for cache-efficient per-property access.
# Use: cargo build -p silksurf-css --features cs-soa
cs-soa = []
