[package]
name = "silksurf-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
publish = false

[dependencies]
silksurf-core = { path = "../silksurf-core" }
silksurf-html = { path = "../silksurf-html" }
silksurf-css = { path = "../silksurf-css" }
silksurf-dom = { path = "../silksurf-dom" }
silksurf-layout = { path = "../silksurf-layout" }
silksurf-render = { path = "../silksurf-render", features = ["parallel"] }
rustc-hash = { workspace = true }
mimalloc = { workspace = true }
serde_json = { workspace = true }
# Structured spans at the pipeline boundary (P8.S6 -- observability roadmap).
# Used by lib.rs `render`, `render_document`, and the incremental variants.
# We instrument coarse boundaries only -- inner-loop code stays span-free to
# preserve throughput.
tracing = { workspace = true }
silksurf-net = { path = "../silksurf-net", optional = true }
silksurf-tls = { path = "../silksurf-tls", optional = true }

[features]
default = []
full = ["net"]
net = ["dep:silksurf-net", "dep:silksurf-tls"]
platform-verifier = ["net", "silksurf-tls/platform-verifier"]
