[package]
name = "silksurf-gui"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
publish = false

# WHY: Linux-first legacy XCB windowing (ADR-010). The default app uses the
# winit backend; XCB stays available as an opt-in comparison backend.
#
# WHAT: `xcb` 1.7.0 is the latest stable cut of the safe Rust bindings. The
# `libxcb_v1_14` default feature gates against the libxcb 1.14 ABI baseline
# that ships on every supported distribution. We do not enable any of the
# extension features (composite, damage, randr, shm, xfixes) yet -- the P6
# slice is intentionally limited to base xproto + WM_DELETE_WINDOW so the
# event loop and PutImage path can be validated end-to-end before opting
# into the larger extension surface in P6.S4+.
#
# HOW: `cargo build -p silksurf-gui` pulls libxcb 1.14+ from the system; on
# Arch this is the `libxcb` package, on Debian-likes `libxcb1-dev`. The crate
# is pure-Rust above the FFI boundary so cross-compilation just needs the
# target's libxcb in the sysroot.
[features]
# xcb-backend: legacy Linux/X11 event loop + PutImage presentation.
xcb-backend = ["dep:xcb"]
# winit-backend: cross-platform event loop + softbuffer pixel presentation.
# softbuffer enables only X11 and Wayland here; winit owns the window, so the
# KMS backend is not part of this runtime surface.
winit-backend = [
  "dep:winit",
  "dep:softbuffer",
  "dep:raw-window-handle",
  "dep:wayland-client",
  "dep:memmap2",
  "dep:rustix",
  "dep:smallvec",
  "softbuffer/x11",
  "softbuffer/x11-dlopen",
  "softbuffer/wayland",
  "softbuffer/wayland-dlopen",
]

[dependencies]
silksurf-core = { path = "../silksurf-core" }
xcb = { version = "1.7", optional = true }
winit = { workspace = true, optional = true }
softbuffer = { workspace = true, optional = true }
raw-window-handle = { version = "0.6", optional = true }
wayland-client = { version = "0.31", optional = true }
memmap2 = { version = "0.9", optional = true }
rustix = { version = "1.0", features = ["fs", "mm", "shm", "std"], optional = true, default-features = false }
smallvec = { workspace = true, optional = true }

[lints]
workspace = true
