[package]
name = "silksurf-layout"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
publish = false

[features]
# dim-soa: Structure-of-Arrays layout for Dimensions.
#
# WHY: Improves cache utilisation during reflow passes that read one field
# across many nodes.  Off by default; opt in per-binary with --features dim-soa.
dim-soa = []

[dependencies]
silksurf-core = { path = "../silksurf-core" }
silksurf-css = { path = "../silksurf-css" }
silksurf-dom = { path = "../silksurf-dom" }
silksurf-text = { path = "../silksurf-text" }
rustc-hash = { workspace = true }
unicode-bidi = { workspace = true }
unicode-linebreak = { workspace = true }
taffy = { workspace = true }

[lints]
workspace = true
