[package]
name = "silksurf-net"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
publish = false

[dependencies]
silksurf-tls = { path = "../silksurf-tls" }
url = { workspace = true }
httparse = "1.10"
rustls = { workspace = true }
flume = { workspace = true, optional = true }
memmap2 = { version = "0.9", optional = true }

[features]
default = []
async-fetch = ["flume"]
cache = ["memmap2"]
