[package]
name = "silksurf-net"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
publish = false

[dependencies]
silksurf-core = { path = "../silksurf-core" }
silksurf-tls = { path = "../silksurf-tls" }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
httparse = "1.10"
rustls = { workspace = true }
rustc-hash = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
h2 = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }

[lints]
workspace = true
